Fix background styling for dark mode on allstudents listing

--- a/client/src/components/AllStudents/AllStudentsDark.module.css
+++ b/client/src/components/AllStudents/AllStudentsDark.module.css
@@ -1,7 +1,7 @@
 .mainBody {
   background-color: black;
   color: white;
-  height: 100vh;
+  height: 100%;
 }
 
 .studentsListingArea {
